--- a/MMTk/.classpath
+++ b/MMTk/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="ext/vmmagic/stub"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/vmmagic/vmmagic.jar" />
+	<classpathentry kind="lib" path="/vmmagic/vmmagic.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JikesRVM"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
